--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -1,3 +1,8 @@
+body {
+    height: 100%;
+    overflow-y: hidden;
+ }
+
 .home .container {
     display: flex;
     height: 100%;
@@ -208,6 +213,7 @@
     margin-top: auto;
     margin-right: 65;
     margin-left: auto;
+    overflow-y: scroll;
 }
 
 .social-list {
